# danta-search

./: .gitignore  API_FLOWS.md  CLAUDE.md  IMPLEMENTATION_DETAILS.md  INGESTION_AND_QUERY_FLOW.md  QUERY_ENGINE_KNOWLEDGE_GRAPH_RND.md  README.md  RND_IMPLEMENTATION_PLAN.md  architecture.html  chat_api_example.py  data_preprocessor.py  gchat_system_design.md  mockup-chat.html  mockup-dashboards.html  mockup-landing.html  plan-industryGradeExcelAnalytics.prompt.md
server/: CLAUDE.md  pyproject.toml
server/app/: dependencies.py  main.py
server/config/: ingestion_policy.json
server/deploy/: README.md  autoscale.sh  cloud-init.yaml  eventgrid_functions.sh  publish_queue_depth.py  start-worker.sh  vmss.bicep  worker-cpu.sh  worker-io.sh
server/pdf_chat/: config.py  model_router.py  tunables.py
server/testing/: _execution_gate_check.py  _ingestion_static_check.py  _phase15_check.py  _promotion_state_check.py  _prompt_compaction_check.py  _query_work_order_check.py  _retrieval_stability_check.py  _schema_sql_validator_check.py  _semantic_memory_check.py  _system_check.py  _workflow_cognition_check.py  bench_csv_vs_parquet.py  kb_all_joins.py  kb_all_masters.py  kb_demo_goodfor.py  kb_demo_joins.py  kb_demo_populate.py  kb_verify_97.py  load_test_setup.py  manual_rephrase_check.py  test.py  test_dashboard_analyst_grade.py  test_dashboard_chat_tieout_e2e.py  test_dashboard_conformed.py  test_dashboard_density_polarity.py  test_dashboard_empty_and_insight.py  test_dashboard_format_binding.py  test_dashboard_join_gate.py  test_dashboard_parallel_widgets.py  (+23 more)
(+505 files in other folders)
