[project]
name = "server"
version = "0.1.0"
description = "danta-search FastAPI backend"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "authlib>=1.4.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "itsdangerous>=2.2.0",
    "azure-storage-blob>=12.28.0",
    "structlog>=25.5.0",
    "duckdb>=1.3.0",
    "openai>=1.30.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "charset-normalizer>=3.0.0",
    "clevercsv>=0.8.0",
    "tiktoken>=0.12.0",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "pgvector>=0.3.6",
    "datafusion>=53.0.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "sqlglot>=30.8.0",
    "psutil>=5.9",
    "polars>=1.0.0",
    "gevent>=24.0.0",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = false
